# ENS_data

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
core/: __init__.py  settings.py  urls.py
ens_api/: apps.py  namehash.py  testing.py  tests.py  urls.py  views.py
ens_api/abis/: __init__.py  ens_registry.json  public_resolver_abi.json
ens_api/utils/: client.py  ens.py  errors.py
ens_data/: manage.py
ens_data/ens_api/: apps.py  namehash.py  resolver.py  urls.py  views.py
ens_data/ens_api/abis/: __init__.py
ens_data/ens_data/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.example
frontend/src/app/: globals.css  page.tsx
