[tool.poetry]
name = "ens-data"
version = "0.1.0"
description = ""
authors = ["Sergey Nesterov <sergioreklamplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
web3 = "^6.19.0"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
ens-normalize = "^3.0.7"
pysha3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
